--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
+    "tiny-invariant": "^1.3.3",
     "typescript": "^5.4.5"
   }
 }
