--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/react": "^3.3.2",
     "@astrojs/tailwind": "^5.1.0",
-    "@headlessui/react": "^2.0.3",
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/themes": "^3.0.3",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.7.1",
